<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" translatable="false">Lightning Launcher+</string>
    <string name="app_name_for_list" translatable="false"> ➜ <u>Lightning</u> Launcher+</string>
    <string name="app_name_for_activity" translatable="false">Lightning Launcher+</string>
    <string name="app_variant_name" translatable="false">Sideload Version</string>
    <string name="app_variant_unavailable">This feature is not available on the %s.
        \n\n<i>Look up Lightning Launcher on GitHub for more information.</i></string>
    <string name="add_group">Add Group</string>
    <string name="apps_hidden">- Hidden</string>
    <string name="migrated">Old settings have been migrated</string>
    <string name="force_untranslated">Use English Language</string>
    <string name="force_untranslated_tip">Force Lightning Launcher to be in English.\n(Do not translate to your language.)</string>
    <string name="edit_mode">Edit Mode</string>
    <string name="edit_mode_tip">Change groups, add websites, and more.</string>
    <string name="new_multitasking">Close after Launch</string>
    <string name="new_multitasking_tip">If enabled, Lightning Launcher will close itself when you open an app.</string>
    <string name="allow_chain_launch">Use Quest Native Launching</string>
    <string name="allow_chain_launch_tip">Launches apps with a method similar to the Quest\'s default launcher.
        \nTurning this off will change how windows are organized, and could cause issues.</string>
    <string name="icon_size">Size</string>
    <string name="icon_size_tip">Desired size of apps</string>
    <string name="icon_margin">Margin</string>
    <string name="icon_margin_tip">Amount of space between apps</string>
    <string name="icon_corners">Corners</string>
    <string name="icon_corners_tip">Roundness of app corners</string>
    <string name="icon_horizontal_tip">List apps vertically or horizontally</string>
    <string name="apps_vr">VR Apps</string>
    <string name="apps_phone">Phone Apps</string>
    <string name="apps_tv">TV Apps</string>
    <string name="apps_panel">Panel Apps</string>
    <string name="apps_web">Websites</string>
    <string name="default_group">Use group as default for new:</string>
    <string name="app_name_icon">Below App Icons</string>
    <string name="app_name_wide">Below App Banners</string>
    <string name="settings_main">Lightning Launcher</string>
    <string name="settings_addons_attract">Shortcuts</string>
    <string name="settings_addons">Shortcuts</string>
    <string name="settings_addons_tip">Make Lightning Launcher\neasier to access!</string>
    <string name="settings_update">Get Latest Update</string>
    <string name="settings_enable_updates">Notify me of New Updates</string>
    <string name="settings_enable_updates_tip">Click to show notifications for new updates.
    \n<i>You previously turned this off when skipping an update.</i></string>
    <string name="behavior_header">Behavior</string>
    <string name="background_header">Wallpaper &amp; Style</string>
    <string name="disp_wide">Display as Banner</string>
    <string name="disp_icon">Display as Icon</string>
    <string name="disp_name">Always Show Names</string>
    <string name="more_options">More Options</string>
    <string name="favorite_enable">Mark as Favorite</string>
    <string name="favorite_disable">Un-mark as Favorite</string>
    <string name="advanced_header">Advanced Settings</string>
    <string name="refresh_button">Full Reload &amp; Refresh</string>
    <string name="advanced_interface">Interface</string>
    <string name="advanced_reset">Refresh &amp; Reset</string>
    <string name="advanced_launching">Launch Preferences</string>
    <string name="advanced_search">Search Settings</string>
    <string name="advanced_backup">Settings Backup</string>
    <string name="advanced_alpha">Background Translucency</string>
    <string name="advanced_alpha_preserve">Preserve Details with Translucency</string>
    <string name="advanced_alpha_preserve_tip">Preserve background details when passthrough is off,\nuse fancy partial translucency when it\'s on.\n<i>Works best with dark backgrounds.</i></string>
    <string name="advanced_alpha_tip">Makes the background of Lightning Launcher translucent in passthrough.</string>
    <string name="advanced_alpha_clamp">Quest 3 Passthrough Blur</string>
    <string name="advanced_alpha_clamp_tip">Allows for a blurred background while in passthrough. <i>Limits the amount of translucency.</i></string>
    <string name="advanced_alpha_blocked_message">You can adjust advanced transparency settings here if you set a different wallpaper.</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="dark_mode_tip">If on, labels will appear white on a dark background.</string>
    <string name="enable_groups">Enable Groups</string>
    <string name="enable_groups_tip">Turn this off to show all apps at once, without grouping.</string>
    <string name="group_wider">Wider Groups</string>
    <string name="group_wider_tip">Increases the width of group buttons</string>
    <string name="clear_labels">Reset All App Labels to Default</string>
    <string name="group_defaults_button">Default Groups</string>
    <string name="icons_settings_button">Refresh Icons</string>
    <string name="show_playtimes">Show Playtimes</string>
    <string name="show_playtimes_desc">Show playtime on app banners.
    \n\n<i>Requires usage data access</i></string>
    <string name="open_usage">Usage Data Access</string>
    <string name="open_usage_desc">Open a settings page where you can turn on or off the ability for apps such as Lighting Launcher to view you playtime &amp; usage data.</string>
    <string name="close_fully">Fully Close Lightning Launcher</string>
    <string name="close_fully_desc">Fully closes Lightning Launcher.  <i>(You can then reopen it)</i>
        \n\nThis lets you troubleshoot issues without rebooting.</string>
    <string name="playtime_charts_warn">Install <b>Quest Game Tuner</b> to view playtime charts</string>
    <string name="request_playtime_title">Usage Data Access Required</string>
    <string name="request_playtime_msg">To see your playtime in <i>Lighting Launcher</i>,
        \nyou need to grant it access to app usage data.
        \n
        \nIf <i>Quest Game Tuner</i> is also installed, clicking the playtime will open a daily or monthly chart.
        \n
        \n<i>You can hide the playtime button in Advanced Settings.</i>
    </string>
    <string name="long_press">Long Press to Edit</string>
    <string name="long_press_tip"><b>When on,</b> long-pressing an app will enter edit mode and select it.
    \n<b>When off,</b> long-pressing an app will show details.</string>
    <string name="reduce_motion">Reduce Motion</string>
    <string name="reduce_motion_tip">Disables animations in the app list.</string>
    <string name="search_web">Show Web Search Engines in Searches</string>
    <string name="search_hidden">Show Hidden Apps in Searches</string>
    <string name="settings_save">Export Settings</string>
    <string name="settings_load">Import Settings</string>
    <string name="groupings_save">Export Groupings</string>
    <string name="groupings_load">Import Groupings</string>
    <string name="reload_icon">Reset Icon</string>
    <string name="open_tuning"><i>Tune with</i></string>
    <string name="open_tuning_tip"><i>Quest Game Tuner</i> lets you adjust resolution, FPS, and more!</string>
    <string name="tuner_options">⚙</string>
    <string name="hidden_groups_message">Turning this option off will hide the top bar when not in Edit Mode.\n
        \nThe settings button will also be hidden when not in Edit Mode.\n
        \nInstead, <b>press the back button to open settings.</b>
    </string>
    <string name="custom_window_size_message">Custom window sizes won\'t work correctly for every app.\n
        \nIf an app does not open using a custom size,
        \nrevert this setting to "App\'s Own Window".
    </string>
    <string name="download_browser_message">For the best experience, you must install <b>Lightning Browser</b> to open websites.\n
        \n<i>(Alternatively, you can try to change the browser in Settings > Advanced Settings)</i>
    </string>
    <string name="change_browser_message">The selected default browser is unavailable.\n
        \n<i>Change the browser in Settings > Advanced Settings.</i>
    </string>
    <string name="update_browser_message">For the best experience, you must update Lightning Browser.</string>
   <string name="download_browser_toast_main">Open the website again</string>
    <string name="download_browser_toast_bold">after Lightning Browser is installed</string>
    <string name="website_title">Websites in Lightning Launcher</string>
    <string name="website_subtitle1">Easily Access Websites &amp; Web Apps</string>
    <string name="website_info1">
        Websites will appear as apps in the launcher.\n
        \nYou can also search the web from the search bar.
    </string>
    <string name="website_subtitle2">Audio in the Background</string>
    <string name="add_website">Add a Website</string>
    <string name="add_website_url_label">Enter Any Website URL</string>
    <string name="add_website_bad_url">Enter a valid URL</string>
    <string name="add_website_used_url">This website is already in %1$s</string>
    <string name="add_website_audio_info">Added websites can play background audio</string>
    <string name="add_website_group">Add to %s</string>
    <string name="warning">Important Info</string>
    <string name="cancel">Cancel</string>
    <string name="understood_long">I understand, continue.</string>
    <string name="tip_info_website">About Adding Websites</string>
    <string name="tip_info">Open App Info</string>
    <string name="addons_install">Install</string>
    <string name="addons_update">Update</string>
    <string name="addons_activate">Activate</string>
    <string name="addons_open">Launch</string>
    <string name="addons_deactivate">Deactivate</string>
    <string name="addons_uninstall">Uninstall</string>
    <string name="transfer_to_variant">Transfer Launcher Settings to this Variant</string>
    <string name="transfer_dialog_title">Transfer Launcher Settings</string>
    <string name="transfer_dialog_details">All settings, <u>including groups and sort</u>,
        will be copied from the source (top) to the destination (bottom).
        \n<b>This cannot be undone!</b></string>
    <string name="transfer_dialog_destination_disclaimer">⚠️   This variant\'s current settings will be lost!</string>
    <string name="transfer_dialog_confirm">⚠️ Transfer Settings</string>
    <string name="dmqs_0"><b>Lightning&#160;Launcher, Quest Store Version:\n</b>Understand what this app can and can\'t do.</string>
    <string name="dmqs_can_0">Launch apps which are already installed on your device</string>
    <string name="dmqs_can_1">Categorize and adjust the appearance of apps <i>within Lightning&#160;Launcher</i></string>
    <string name="dmqs_can_2">Adjust how apps are opened <i>from Lightning&#160;Launcher</i></string>
    <string name="dmqs_can_3">Add shortcuts to websites <i>to Lightning&#160;Launcher</i></string>
    <string name="dmqs_cant_0">Display applications which you have not legitimately installed</string>
    <string name="dmqs_cant_1">Launch applications which you own but do not have installed</string>
    <string name="dmqs_cant_2">Categorize or adjust anything <i>outside of the Lightning&#160;Launcher app</i></string>
    <string name="dmqs_cant_3">Modify or replace any system features, <i>such as the built-in app library/navigator</i></string>
    <string name="dmqs_can">This app <b>can</b>:</string>
    <string name="dmqs_cant">This app can <b>not</b>:</string>
</resources>