<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="39dp"
    android:layout_marginStart="40dp"
    android:layout_marginBottom="10dp"
    android:baselineAligned="false"
    android:orientation="horizontal"
    tools:showIn="@layout/dialog_addons_vr_dock">

    <com.threethan.launchercore.view.LcButton
        android:id="@+id/addonUninstall"
        android:background="@drawable/lc_bkg_button_section"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_weight="1"
        android:drawableStart="@drawable/ic_uninstall"
        android:text="@string/addons_uninstall" />

    <com.threethan.launchercore.view.LcButton
        android:id="@+id/addonDeactivate"
        android:background="@drawable/lc_bkg_button_section"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_weight="1"
        android:drawableStart="@drawable/ic_activate"
        android:text="@string/addons_deactivate" />

    <com.threethan.launchercore.view.LcButton
        android:id="@+id/addonOpen"
        style="@style/buttonHighlight"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_weight="1"
        android:drawableEnd="@drawable/ic_download"
        android:visibility="gone"
        android:text="@string/addons_open" />

    <com.threethan.launchercore.view.LcButton
        android:id="@+id/addonInstall"
        style="@style/buttonHighlight"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_weight="1"
        android:drawableEnd="@drawable/ic_download"
        android:visibility="gone"
        android:text="@string/addons_install" />

    <com.threethan.launchercore.view.LcButton
        android:id="@+id/addonUpdate"
        style="@style/buttonHighlight"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_weight="1"
        android:drawableEnd="@drawable/ic_update"
        android:text="@string/addons_update"
        android:visibility="gone" />

    <com.threethan.launchercore.view.LcButton
        android:id="@+id/addonActivate"
        style="@style/buttonHighlight"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_weight="1"
        android:drawableEnd="@drawable/ic_activate"
        android:text="@string/addons_activate"
        android:visibility="gone" />


</LinearLayout>