<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="20dp">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="46sp"
        android:layout_marginBottom="7dp">

        <TextView
            style="@style/SettingTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/add_website"
            android:layout_gravity="top|start"/>

        <TextView
            style="@style/SettingButtonLabel"
            android:layout_width="match_parent"
            android:layout_height="20sp"
            android:layout_marginStart="20sp"
            android:text="@string/add_website_audio_info"
            android:textColor="#A0FFFFFF"
            android:visibility="visible"
            android:layout_gravity="bottom"/>

        <ImageView
            android:layout_width="17sp"
            android:layout_height="17sp"
            android:layout_marginStart="5dp"
            android:layout_marginBottom="1sp"
            android:src="@drawable/ic_music_hint"
            android:layout_gravity="bottom|start"/>

        <Button
            android:id="@+id/info"
            style="@android:style/DeviceDefault.ButtonBar"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@drawable/bkg_hover_button"
            android:foreground="@drawable/ic_info"
            android:textColor="@android:color/white"
            android:tooltipText="@string/tip_info_website"
            android:layout_gravity="top|end"
            tools:ignore="UnusedAttribute" />

    </FrameLayout>

    <View
        android:id="@+id/sizer"
        style="@style/SettingButtonLabel"
        android:layout_width="350dp"
        android:layout_height="0dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginEnd="-8dp"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <FrameLayout
            android:id="@+id/presetGoogle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:background="@drawable/lc_bkg_button"
            android:padding="5dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/web_preset_google" />
        </FrameLayout>

        <FrameLayout
            android:id="@+id/presetYoutube"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:background="@drawable/lc_bkg_button"
            android:padding="4.5dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/web_preset_youtube" />
        </FrameLayout>

        <FrameLayout
            android:id="@+id/presetDiscord"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:background="@drawable/lc_bkg_button"
            android:padding="4dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/web_preset_discord" />
        </FrameLayout>

        <FrameLayout
            android:id="@+id/presetSpotify"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:background="@drawable/lc_bkg_button"
            android:padding="5dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/web_preset_spotify" />
        </FrameLayout>

        <FrameLayout
            android:id="@+id/presetTidal"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:background="@drawable/lc_bkg_button"
            android:padding="4dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/web_preset_tidal" />
        </FrameLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@drawable/bkg_name_app_star"
            android:text="https://"
            android:layout_marginEnd="2dp"
            android:paddingStart="10dp"
            android:paddingEnd="2dp"
            android:textColor="#A0FFFFFF"
            android:gravity="center_vertical"
            tools:ignore="HardcodedText" />
        <com.threethan.launcher.activity.view.EditTextWatched
            android:id="@+id/appUrl"
            android:layout_width="match_parent"
            android:layout_height="40sp"
            android:layout_gravity="bottom"
            android:autofillHints="text"
            android:background="@drawable/bkg_name_app"
            android:inputType="textUri"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:textAlignment="gravity"
            android:textColor="@android:color/white"
            android:textSize="24sp" />
    </LinearLayout>

    <TextView
        style="@style/SettingButtonLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:layout_marginEnd="2dp"
        android:text="@string/add_website_url_label"
        android:textColor="#A0FFFFFF" />

    <TextView
        android:id="@+id/badUrl"
        style="@style/SettingButtonLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/add_website_bad_url"
        android:textColor="#C36161"
        android:visibility="gone"
        tools:visibility="visible" />

    <TextView
        style="@style/SettingButtonLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/add_website_used_url"
        android:textColor="#C36161"
        android:visibility="gone"
        tools:visibility="visible" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="end"
        android:orientation="horizontal">

        <com.threethan.launchercore.view.LcButton
            android:id="@+id/cancel"
            android:layout_width="125dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="10dp"
            android:text="@string/cancel">

        </com.threethan.launchercore.view.LcButton>

        <com.threethan.launchercore.view.LcButton
            android:id="@+id/install"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/add_website_group" />

    </LinearLayout>

</LinearLayout>